[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmsdatabase"
version = "0.0.1"
authors = [
    { name = "Thomas Antens", email = "t.antens@bradford-space.com" }
]
description = "A package for the FMS database"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "watchdog",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas>=1.3.0",
    "matplotlib",
    "ipywidgets",
    "IPython",
    "sqlalchemy>=1.4",
    "Pillow",
    "python-docx",
    "PyMuPDF",
    "openpyxl",
    "ipyvuetify",
    "chardet",
    "boto3==1.36.3",
    "networkx",
    "pytesseract",
    "opencv-python",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/ThomasAntens-bradford/fmsdatabase.git"

[tool.setuptools]
include-package-data = true

[project.scripts]
fmsdb = "fmsdatabase.cli:main"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.jpg", "*.jpeg", "*.gif"]

# [project.scripts]
# fms-cli = "fmsdatabase.cli:main"

[tool.setuptools_scm]
write_to = "fmsdatabase/_version.py"