[metadata]
name = fmsdatabase
version = 0.0.1
author = Thomas Antens
author_email = t.antens@bradford-space.com
description = A package for the FMS database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThomasAntens-bradford/fmsdatabase.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
packages = find_namespace:
python_requires = >=3.8
include_package_data = True
install_requires =
    watchdog
    numpy
    scipy
    scikit-learn
    pandas >= 1.3.0
    matplotlib
    ipywidgets
    IPython
    sqlalchemy >= 1.4
    Pillow
    python-docx
    docxtpl
    PyMuPDF
    openpyxl
    ipyvuetify
    chardet
    boto3
    networkx
    pytesseract
    opencv-python
    tqdm

[options.packages.find]
where = .

[options.package_data]
* = *.json, *.png, *.jpg, *.jpeg, *.gif

# [options.entry_points]
# console_scripts =
#     fms-cli = fmsdatabase.cli:main
